@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 gematik GmbH
+ * Copyright (c) 2023 gematik GmbH
  * 
  * Licensed under the Apache License, Version 2.0 (the License);
  * you may not use this file except in compliance with the License.
@@ -234,7 +234,7 @@ public class ChallengeTokenValidationService {
         Arrays.stream(AuthenticationMethodReference.values())
             .filter(AuthenticationMethodReference::isAlternativeAuthentication)
             .map(AuthenticationMethodReference::getDescription)
-            .collect(Collectors.toList());
+            .toList();
     return Arrays.stream(amr).anyMatch(altAuthList::contains);
   }
 }
